# pyastgrep

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  HISTORY.rst  README.md  README.rst  RELEASE.rst  pyproject.toml  pyrightconfig.json  release.sh  setup.cfg  tox.ini
.github/workflows/: pre-commit.yml  tests.yml
astpath/: __init__.py  cli.py  search.py  xml.py
docs/: bugs.rst  conf.py  contributing.rst  css_selectors.rst  editors.rst  examples.rst  history.rst  ignoring.rst  index.rst  install.rst  library.rst  tips.rst  usage.rst
src/pyastgrep/: __init__.py  api.py  ast_compat.py  ast_utils.py  asts.py  cli.py  color.py  context.py  dump.py  files.py  ignores.py  printer.py  search.py  xml.py  xpath2.py
tests/: test_cli.py  test_encodings.py  test_errors.py  test_ignores.py  test_library.py  test_parsing.py  test_printing.py  test_symlinks.py  test_xml.py  utils.py
tests/examples/test_cli/: misc.py  other.py
tests/examples/test_encodings/: utf8.py
tests/examples/test_errors/: broken.py-broken  contains_null.py-broken  name.py
tests/examples/test_ignores/: .gitignore  .rgignore  global_gitignore_file
tests/examples/test_ignores/custom_gitignored/: README.txt
tests/examples/test_ignores/custom_rgignored/: README.txt
tests/examples/test_ignores/subdir/subsubdir/: .gitignore
tests/examples/test_library/: example.py
tests/examples/test_printing/: colors.py  context_example.py  decorators.py  indented.py  loadvalue.py  multiple.py  out_of_order.py  statements.py
tests/examples/test_symlinks/: everything_link.py  test_xml_link
tests/examples/test_xml/: bytes.py  everything.py  xml_illegal.py
