[metadata]
name = pyastgrep
version = 0.1
description = A query tool for Python abstract syntax trees
license = MIT
author = Luke Plant
url = https://github.com/spookylukey/pyastgrep
keywords = xpath xml ast asts syntax query
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Natural Language :: English

[options]
packages = find:
package_dir = =src
install_requires =
    lxml>=3.3.5
    elementpath

[options.entry_points]
console_scripts =
    pyastgrep = pyastgrep.cli:main


[options.packages.find]
where = src

[flake8]
#ignore = E501,E731,E126,W504,W503,E203
max-line-length = 120
