[metadata]
name = pyastgrep
version = attr: pyastgrep.__version__
description = A query tool for Python abstract syntax trees
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
author = Luke Plant
url = https://github.com/spookylukey/pyastgrep
keywords = xpath xml ast asts syntax query css grep
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Natural Language :: English

[options]
packages = find:
package_dir = =src
python_requires = >=3.8
install_requires =
    lxml>=3.3.5
    elementpath
    astpretty
    pathspec
    cssselect>=1.2
    backports.strenum; python_version < "3.11"

[options.entry_points]
console_scripts =
    pyastgrep = pyastgrep.cli:main
    pyastdump = pyastgrep.dump:main


[options.packages.find]
where = src

[flake8]
#ignore = E501,E731,E126,W504,W503,E203
max-line-length = 120
